// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-notification-toast #render should render alert notification toast 1`] = `
<gux-notification-toast accent="alert">
  <!---->
  <div class="gux-alert gux-icon">
    <gux-icon decorative="" icon-name="user-add" slot="icon"></gux-icon>
  </div>
  <div class="gux-content">
    <div class="gux-title">
      <div slot="title">
        Title
      </div>
    </div>
    <div class="gux-message">
      <div slot="message">
        This is the message
      </div>
    </div>
  </div>
  <button class="gux-dismiss-button" title="Dismiss">
    <gux-icon icon-name="close" screenreadertext="Dismiss"></gux-icon>
  </button>
</gux-notification-toast>
`;

exports[`gux-notification-toast #render should render neutral notification toast 1`] = `
<gux-notification-toast accent="neutral">
  <!---->
  <div class="gux-icon gux-neutral">
    <gux-icon decorative="" icon-name="user-add" slot="icon"></gux-icon>
  </div>
  <div class="gux-content">
    <div class="gux-title">
      <div slot="title">
        Title
      </div>
    </div>
    <div class="gux-message">
      <div slot="message">
        This is the message
      </div>
    </div>
  </div>
  <button class="gux-dismiss-button" title="Dismiss">
    <gux-icon icon-name="close" screenreadertext="Dismiss"></gux-icon>
  </button>
</gux-notification-toast>
`;

exports[`gux-notification-toast #render should render positive notification toast 1`] = `
<gux-notification-toast accent="positive">
  <!---->
  <div class="gux-icon gux-positive">
    <gux-icon decorative="" icon-name="user-add" slot="icon"></gux-icon>
  </div>
  <div class="gux-content">
    <div class="gux-title">
      <div slot="title">
        Title
      </div>
    </div>
    <div class="gux-message">
      <div slot="message">
        This is the message
      </div>
    </div>
  </div>
  <button class="gux-dismiss-button" title="Dismiss">
    <gux-icon icon-name="close" screenreadertext="Dismiss"></gux-icon>
  </button>
</gux-notification-toast>
`;

exports[`gux-notification-toast #render should render warning notification toast 1`] = `
<gux-notification-toast accent="warning">
  <!---->
  <div class="gux-icon gux-warning">
    <gux-icon decorative="" icon-name="user-add" slot="icon"></gux-icon>
  </div>
  <div class="gux-content">
    <div class="gux-title">
      <div slot="title">
        Title
      </div>
    </div>
    <div class="gux-message">
      <div slot="message">
        This is the message
      </div>
    </div>
  </div>
  <button class="gux-dismiss-button" title="Dismiss">
    <gux-icon icon-name="close" screenreadertext="Dismiss"></gux-icon>
  </button>
</gux-notification-toast>
`;
